<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/con_top"
        android:background="#AF4B3E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="70dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/con_top"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/welocome_partner"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/seoge">
        </TextView>

        <TextView
            android:id="@+id/tv_logintocontinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login"
            android:text="@string/login_to_continue"
            android:textSize="13sp"
            android:paddingTop="10dp"
            android:textColor="@color/gray"
            android:fontFamily="@font/seoge">
        </TextView>


        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_logintocontinue"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:id="@+id/iv_line"
            android:layout_marginTop="20dp"
            android:background="#D2D2D2"/>


        <TextView
            android:id="@+id/tv_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_line"
            android:text="@string/user_id"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/seoge">
        </TextView>




        <EditText
            android:id="@+id/tv_userid_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_userid"
            android:hint="@string/enteryouruserid"
            android:textSize="14sp"
            android:padding="15dp"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:background="@drawable/postborder"
            android:textColor="#0F1D41"
            android:fontFamily="@font/seoge">
        </EditText>


        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_userid_value"
            android:text="@string/password"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/seoge">
        </TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/con_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_password">

        <EditText
            android:id="@+id/tv_password_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/enteryourpassword"
            android:textSize="14sp"
            android:padding="15dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:background="@drawable/postborder"
            android:textColor="#0F1D41"
            android:fontFamily="@font/seoge">
        </EditText>

        <ImageView
            android:id="@+id/password_imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_eye_closed">
        </ImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tv_login_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/con_password"
            android:text="@string/Login"
            android:textSize="16sp"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/login_border"
            android:textColor="@color/white"
            android:fontFamily="@font/seoge">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>